# GBFRTextureFixer

./: .gitignore  GBFRTextureFixer.spec  LICENSE  README.md  README_zh-CN.md  build.ps1  main.py  publish.ps1  pyproject.toml  requirements-dev.txt
libs/: 1 mmat to json.bat  2 json to mmat.bat  MMat_ModelMaterial.fbs  config.txt  extract_mmat.bat
packaging/runtime-libs/: config.txt
src/gbfr_texture_fixer/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
