[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gbfr-texture-fixer"
version = "0.1.0"
description = "Repair outdated GBFR mod MMAT texture streaming metadata"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gbfr-texture-fixer = "gbfr_texture_fixer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

